:tada: GET /files/random
